// Script DBML untuk ERD Sistem Manajemen Aset Sekolah
// Copy paste ke https://dbdiagram.io untuk visualisasi

Table departments {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table employees {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique]
  department_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table vendors {
  id int [pk, increment]
  name varchar(255) [not null]
  contact_info varchar(255)
  address text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table categories {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table assets {
  id int [pk, increment]
  serial_number varchar(255) [not null, unique]
  name varchar(255) [not null]
  category_id int
  status enum('available', 'borrowed', 'damaged') [default: 'available']
  vendor_id int
  received_date date
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table loans {
  id varchar(36) [pk]
  asset_id int [not null]
  employee_id int [not null]
  borrow_date date [not null]
  expected_return_date date [not null]
  actual_return_date date
  return_condition enum('good', 'damaged')
  status enum('active', 'returned') [default: 'active']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Relationships
Ref: employees.department_id > departments.id
Ref: assets.category_id > categories.id
Ref: assets.vendor_id > vendors.id
Ref: loans.asset_id > assets.id
Ref: loans.employee_id > employees.id